@@ -72,7 +72,7 @@
       <li> Added simple plugin manager.</li>
       <li> Added ~/.jabref/plugins as user-specific plugin directory.</li>
       <li> Added \r marker to WrapFileLinks formatter that outputs file links without expanding relative links.</li>
-      <li> Added [authorAlpha] key marker that formats authors according to the &quot;alpha&quot; BibTeX style. Patch submitted by Oliver Kopp.</li>
+      <li> Added [authorsAlpha] key marker that formats authors according to the &quot;alpha&quot; BibTeX style. Patch submitted by Oliver Kopp.</li>
       <li> Table sort order set by clicking and Ctrl-clicking table columns is now immediately set as default sort order in preferences.</li>
       <li> Changed LyX pipe setting so it works whether &quot;.in&quot; is included or omitted.</li>
       <li> Modified ISI importer so the words &quot;of&quot;, &quot;and&quot; and &quot;the&quot; will not be capitalized in the title, journal or publisher fields.</li>
